log/build_2024-10-18_02-15-24/my_python_node/stderr.log
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 265
    '''
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 323)

